# fidopqc-rs

./: .env.example  .gitignore  .srl  CODEOWNERS  Cargo.toml  Dockerfile.gateway  Dockerfile.openresty  LICENSE  README.docker.md  README.docker.zh-TW.md  README.md  README.zh-TW.md  config.json  docker-compose-microservices.yml  docker-compose.yml  index.html
certs_hybrid/hybrid-ca/: ca.crt  ca.key  ca.srl
certs_hybrid/hybrid-client/: client.crt  client.csr  client_ext.cnf  client_pkcs8.key
certs_hybrid/hybrid-server/: server.crt  server.csr  server.key  server_ext.cnf
docker/nginx/: log-service.conf  nginx.conf  openresty.conf  payment-service.conf  user-service.conf
docker/nginx/html/: index.html
docker/nginx/html/log-service/: index.html
docker/nginx/html/payment-service/: index.html
docker/nginx/html/user-service/: index.html
scripts/: clean_certs.sh  docker-entrypoint.sh  generate_certs.sh  generate_local_certs.sh  generate_local_client_certs.sh  generate_local_server_certs.sh
src/: api_response.rs  call_proxy.rs  error.rs  handler.rs  http_client.rs  jwt.rs  main.rs  tls.rs  webauthn.rs
