[package]
name = "passkeymesh-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Jerry <vp780412@gmail.com>"]
description = "A gateway that provides WebAuthn authentication and PQC mTLS connection to backend services"
license = "MIT"
repository = "https://github.com/JerryR7/fidopqc-rs"
readme = "README.md"
keywords = ["webauthn", "fido2", "pqc", "mtls", "authentication"]
categories = ["authentication", "web-programming", "cryptography"]
rust-version = "1.86.0"

[dependencies]
# Web framework and server
axum = { version = "0.6", features = ["json", "headers"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAuthn related
webauthn-rs = "0.5.1"

# JWT handling
jsonwebtoken = "8.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# URL handling
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"

# Time handling
chrono = "0.4"

# UUID generation
uuid = { version = "1.3", features = ["v4", "serde"] }

# Singleton pattern
once_cell = "1.17"

# OpenSSL related (for PQC TLS)
openssl = { version = "0.10" }
openssl-sys = { version = "0.9" }

# Environment variables
dotenv = "0.15.0"

# Temporary file handling
tempfile = "3.8.0"

[profile.release]
# Optimization level
opt-level = 3
# Enable LTO (Link Time Optimization)
lto = true
# Enable debug information
debug = false
# Enable code splitting
codegen-units = 1
# Enable panic abort
panic = "abort"
# Enable symbol stripping
strip = true